# desktop_terminal

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.c
app/res/: res_conf.h
app/ui/: page_about_us.c  page_camera.c  page_conf.h  page_main.c
app/ui/data/: device_data.c  device_data.h
app/ui/utils/: ble_mesh.c  utils.c
app/ui/utils/file/: file_save.c
component/font/: font_utils.c
component/linux_component/: CMakeLists.txt  systemv_queue.c  systemv_queue.h
component/net/: CMakeLists.txt  http_manager.c
component/player/: CMakeLists.txt  audio_player_async.c
component/usb_hid/: CMakeLists.txt  usb_hid_async.c  usb_hid_async.h  usb_hid_utils.c
component/wifi/: CMakeLists.txt  wpa_manager.c  wpa_manager.h
platform/t113/src/porting/: lv_port_disp.c  lv_port_indev.c
